--- a/container-build/Dockerfile
+++ b/container-build/Dockerfile
@@ -1,2 +1,6 @@
 # Use the httpd-parent image as base
 FROM quay.io/redhattraining/httpd-parent
+LABEL io.openshift.expose-services="8080:http"
+USER 1001
+EXPOSE 8080
+RUN sed -i "s/Listen 80/Listen 8080/g" /etc/httpd/conf/httpd.conf && chgrp -R 0 /var/log/httpd /var/run/httpd && chmod -R g=u /var/log/httpd /var/run/httpd
